resolved responsiveness issue on smaller devices

--- a/src/app/create-account/EditAccountForm.module.css
+++ b/src/app/create-account/EditAccountForm.module.css
@@ -23,6 +23,7 @@
   align-items: center;
   gap: 15px;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .emergencyAddButton {
